--- a/package.json
+++ b/package.json
@@ -1,35 +1,26 @@
 {
-  "name": "backend-assessment",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "Minority Africa Advance Dev Assessment ",
-  "main": "build/src/app.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rimraf ./build && tsc",
-    "start": "node build/src/app.js",
-    "lint": "eslint . --ext .ts"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/"
-  },
-  "homepage": "",
-  "devDependencies": {
-    "@types/node": "^18.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
-    "eslint": "^8.19.0",
-    "eslint-plugin-react": "^7.30.1",
-    "typescript": "^4.7.4"
-  },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "rimraf": "^3.0.2",
-    "ts-node": "^10.8.2"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.4",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.6.0"
   }
 }
