--- a/.github/workflows/CI_pipeline.js.yml
+++ b/.github/workflows/CI_pipeline.js.yml
@@ -19,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16]
+        node-version: [ 14, 16, 18 ]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -29,6 +29,7 @@ jobs:
       with:
         node-version: 16.18.1
         cache: 'npm'
+        cache-dependency-path: subdir/package-lock.json
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
