--- a/.github/workflows/CI_pipeline.js.yml
+++ b/.github/workflows/CI_pipeline.js.yml
@@ -28,7 +28,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 16.18.1
-        cache: 'npm'
+        cache: 'npm-cache'
         cache-dependency-path: '**/package-lock.json'
     - run: npm ci
     - run: npm run build --if-present
