--- a/.github/workflows/CI_pipeline.js.yml
+++ b/.github/workflows/CI_pipeline.js.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: 'backend-assessment'
+        working-directory: 'MAIBI-BACKEND-ASSESSMENT'
 
     strategy:
       matrix:
@@ -29,7 +29,7 @@ jobs:
       with:
         node-version: 16.18.1
         cache: 'npm'
-        cache-dependency-path: './MAIBI-BACKEND-ASSESSMENT/package-lock.json'
+        cache-dependency-path: '**/package-lock.json'
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
