--- a/.github/workflows/CI_pipeline.js.yml
+++ b/.github/workflows/CI_pipeline.js.yml
@@ -27,6 +27,6 @@ jobs:
         node-version: 16.18.1
         cache: 'npm'
         cache-dependency-path: '**/**/package.json'
-    - run: npm ci
+    - run: npm@5 ci
     - run: npm run build --if-present
     - run: npm test
