--- a/.github/workflows/CI_pipeline.js.yml
+++ b/.github/workflows/CI_pipeline.js.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         node-version: 16.18.1
         cache: 'npm'
-        cache-dependency-path: '**/**/package.json'
+        cache-dependency-path: '**/**/package-lock.json'
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
