--- a/.github/workflows/CI_pipeline.js.yml
+++ b/.github/workflows/CI_pipeline.js.yml
@@ -25,6 +25,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 16.18.1
+        cache: 'npm'
+        cache-dependency-path: '**/**/package-lock.json'
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
