--- a/.github/workflows/CI_pipeline.js.yml
+++ b/.github/workflows/CI_pipeline.js.yml
@@ -22,6 +22,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: dir
+    - run: npm install
     - name: Setup node
       uses: actions/setup-node@v3
       with:
