--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "mocha test.js --reporter mocha-junit-reporter --timeout 60000 --exit",
+    "test": "mocha test.js",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
