--- a/.github/workflows/CI_pipeline.js.yml
+++ b/.github/workflows/CI_pipeline.js.yml
@@ -36,4 +36,4 @@ jobs:
       if: github.ref == 'ref/heads/main' && job.status == 'success'
       run: git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
     - name: Deploy to heroku
-      run: git push heroku HEAD:main -f
+      run: git push heroku main
