--- a/.github/workflows/CI_pipeline.js.yml
+++ b/.github/workflows/CI_pipeline.js.yml
@@ -33,7 +33,6 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
     - name: Add remote origin
-      if: github.ref == 'ref/heads/main' && job.status == 'success'
       run: git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
     - name: Deploy to heroku
-      run: git push heroku main
+      run: git push heroku HEAD:main -f
