--- a/.github/workflows/CI_pipeline.js.yml
+++ b/.github/workflows/CI_pipeline.js.yml
@@ -35,5 +35,5 @@ jobs:
     - name: Add remote origin
       run: git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
     - name: Deploy to heroku
-      run: git fetch --all --unshallow
-      run: git push heroku HEAD:master -f
+    - run: git fetch --all --unshallow
+    - run: git push heroku HEAD:master -f
