--- a/.github/workflows/CI_pipeline.js.yml
+++ b/.github/workflows/CI_pipeline.js.yml
@@ -37,4 +37,4 @@ jobs:
     - name: Pull repo
       run: git fetch --all --unshallow
     - name: Deploy to heroku
-      run: git push heroku HEAD:main -f
+      run: git push heroku main
