--- a/.github/workflows/CI_pipeline.js.yml
+++ b/.github/workflows/CI_pipeline.js.yml
@@ -34,7 +34,7 @@ jobs:
     - run: npm test
     - name: Add remote origin
       run: git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
-    - name: Pull repo
-      run: git fetch --all --unshallow
+    - name: Clone repo
+      run: heroku git:clone -a maibi-backend-assessment
     - name: Deploy to heroku
       run: git push heroku main
